--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
-/* Your CSS Code here. */
+h2{
+    text-align: center;
+}
+.class{
+    justify-content: space-evenly;
+    display: flex;
+    margin-top: 40px;
+}
+.box{
+    justify-content: space-evenly;
+    display: flex;
+    margin-left: 50px;  
+}
